; ModuleID = '/home/carl/AnghaBench/git/extr_name-hash.c_find_dir_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_name-hash.c_find_dir_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dir_entry = type { i32 }
%struct.index_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.dir_entry* (%struct.index_state*, i8*, i32)* @find_dir_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.dir_entry* @find_dir_entry(%struct.index_state* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.index_state*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.index_state* %0, %struct.index_state** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.index_state*, %struct.index_state** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @memihash(i8* %10, i32 %11)
  %13 = call %struct.dir_entry* @find_dir_entry__hash(%struct.index_state* %7, i8* %8, i32 %9, i32 %12)
  ret %struct.dir_entry* %13
}

declare dso_local %struct.dir_entry* @find_dir_entry__hash(%struct.index_state*, i8*, i32, i32) #1

declare dso_local i32 @memihash(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
